# SpotifyTakipci

./: README.md  RUN.bat  main.py  pyproject.toml  requirements.txt
CLI/: HataYakala.py  __init__.py
Libs/: SpotiFucker.py  __init__.py
Libs/Population/: __init__.py  first_names.py  last_names.py
Settings/: HESAPLAR.csv
