[tool.poetry]
name = "Spotify Takipçi Botu"
version = "1.0"
description = "Python | Requests » Spotify Takipçi Botu"
authors = ["keyiflerolsun <keyiflerolsun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^22.2.1"
setuptools = "^63.2.0"
wheel = "^0.37.1"
requests = "^2.27.1"
Kekik = "^0.0.3"
rich = "^12.5.1"